--- a/resumesite/app/views/main/index.html.erb
+++ b/resumesite/app/views/main/index.html.erb
@@ -1,12 +1,42 @@
-<%= stylesheet_link_tag "layout.css" %>
 
+<style>
+	.sitewide-banner {
+		height: 48px;
+  		background: #3b4671;
+  		position: absolute;
+  		top: 0;
+  		width: 100%;
+  		left: 0;
+  		z-index: 99;
+	}
+	.h1 {
+
+	}
+	#header {
+		text-align: center;
+	}
+	.menu {
+		list-style-type: none;
+		margin: 0;
+		padding: 0;
+		display: inline;
+	}
+	.menu li {
+		float: left;
+		padding: 2px;
+	}
+</style>
+<div class="sitewide-banner">
+</div>
+</br>
 <h1 align = "center">Teaguenology</h1>
-
-<ul>
-	<li>Home</li>
-	<li>About</li>
-	<li>Work Experience</li>
-	<li>Projects</li>
-	<li>Education</li>
-	<li>Contact Me</li>
-</ul>
+<div id="header">
+	<ul class="menu">
+		<li>Home</li>
+		<li>About</li>
+		<li>Work Experience</li>
+		<li>Projects</li>
+		<li>Education</li>
+		<li>Contact Me</li>
+	</ul>
+</div>
